// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oas operation openapi v2 1`] = `
Array [
  Object {
    "deprecated": false,
    "description": "",
    "extensions": Object {
      "x-another": Object {
        "property": "value",
      },
      "x-test": true,
    },
    "id": "87bea6ad",
    "iid": "addPet",
    "internal": false,
    "method": "post",
    "path": "/pets",
    "request": Object {
      "body": Object {
        "contents": Array [
          Object {
            "examples": Array [],
            "id": "b9a74577",
            "mediaType": "application/json",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/definitions/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight-id": "#/definitions/Pet",
              "xml": Object {
                "name": "Pet",
              },
            },
          },
          Object {
            "examples": Array [],
            "id": "a37e5c12",
            "mediaType": "application/xml",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/definitions/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight-id": "#/definitions/Pet",
              "xml": Object {
                "name": "Pet",
              },
            },
          },
        ],
        "description": "Pet object that needs to be added to the store",
        "id": "00207fd3",
        "required": true,
      },
      "cookie": Array [],
      "headers": Array [],
      "path": Array [],
      "query": Array [],
    },
    "responses": Array [
      Object {
        "code": "405",
        "contents": Array [],
        "description": "Invalid input",
        "headers": Array [],
        "id": "d61e3a98",
      },
    ],
    "security": Array [
      Array [
        Object {
          "flows": Object {
            "implicit": Object {
              "authorizationUrl": "https://petstore.swagger.io/oauth/dialog",
              "scopes": Object {
                "read:pets": "read your pets",
                "write:pets": "modify pets in your account",
              },
            },
          },
          "id": "0407a17d",
          "key": "petstore_auth",
          "type": "oauth2",
        },
      ],
    ],
    "servers": Array [
      Object {
        "id": "e60403d7",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "ecbccfaa",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "Add a new pet to the store",
    "tags": Array [
      Object {
        "id": "2e010d1a",
        "name": "pet",
      },
    ],
  },
  Object {
    "deprecated": false,
    "extensions": Object {},
    "id": "122ea0ed",
    "internal": false,
    "method": "get",
    "path": "/pets",
    "request": Object {
      "cookie": Array [],
      "headers": Array [
        Object {
          "deprecated": false,
          "id": "eb6bbad5",
          "name": "Rate-Limit",
          "required": false,
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight-id": "#",
          },
          "style": "simple",
        },
      ],
      "path": Array [],
      "query": Array [
        Object {
          "deprecated": false,
          "id": "7831e071",
          "name": "skip",
          "required": false,
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight-id": "#",
          },
          "style": "form",
        },
        Object {
          "deprecated": false,
          "id": "8d2b0bf9",
          "name": "limit",
          "required": false,
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight-id": "#",
          },
          "style": "form",
        },
      ],
    },
    "responses": Array [
      Object {
        "code": "200",
        "contents": Array [],
        "description": "",
        "headers": Array [],
        "id": "d3eaa051",
      },
    ],
    "security": Array [],
    "servers": Array [
      Object {
        "id": "e60403d7",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "ecbccfaa",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "List pets",
    "tags": Array [],
  },
  Object {
    "deprecated": false,
    "extensions": Object {},
    "id": "7a7196f3",
    "internal": false,
    "method": "options",
    "path": "/pets",
    "request": Object {
      "cookie": Array [],
      "headers": Array [
        Object {
          "deprecated": false,
          "id": "eb6bbad5",
          "name": "Rate-Limit",
          "required": false,
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight-id": "#",
          },
          "style": "simple",
        },
      ],
      "path": Array [],
      "query": Array [
        Object {
          "deprecated": false,
          "id": "7831e071",
          "name": "skip",
          "required": false,
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight-id": "#",
          },
          "style": "form",
        },
        Object {
          "deprecated": false,
          "id": "8d2b0bf9",
          "name": "limit",
          "required": false,
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight-id": "#",
          },
          "style": "form",
        },
      ],
    },
    "responses": Array [
      Object {
        "code": "200",
        "contents": Array [],
        "description": "",
        "headers": Array [
          Object {
            "deprecated": false,
            "description": "Allowed clients",
            "id": "08ccc12a",
            "name": "Allow",
            "required": false,
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "type": "string",
              "x-stoplight-id": "#",
            },
            "style": "simple",
          },
          Object {
            "deprecated": false,
            "description": "Remaining requests",
            "id": "e3387166",
            "name": "X-Rate-Limit",
            "required": false,
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "format": "int64",
              "maximum": 9223372036854776000,
              "minimum": -9223372036854776000,
              "type": "number",
              "x-stoplight-id": "#",
            },
            "style": "simple",
          },
        ],
        "id": "f9cadce3",
      },
    ],
    "security": Array [],
    "servers": Array [
      Object {
        "id": "e60403d7",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "ecbccfaa",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "List pets",
    "tags": Array [],
  },
  Object {
    "deprecated": false,
    "description": "",
    "extensions": Object {},
    "id": "979de13c",
    "internal": false,
    "method": "delete",
    "path": "/pets",
    "request": Object {
      "cookie": Array [],
      "headers": Array [],
      "path": Array [],
      "query": Array [],
    },
    "responses": Array [
      Object {
        "code": "400",
        "contents": Array [],
        "description": "Invalid ID supplied",
        "headers": Array [],
        "id": "29d958a0",
      },
      Object {
        "code": "404",
        "contents": Array [],
        "description": "Pet not found",
        "headers": Array [],
        "id": "2dd95eec",
      },
    ],
    "security": Array [],
    "servers": Array [
      Object {
        "id": "e60403d7",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "ecbccfaa",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "Deletes a pet",
    "tags": Array [],
  },
  Object {
    "deprecated": false,
    "description": "",
    "extensions": Object {},
    "id": "d2549ba8",
    "iid": "updatePet",
    "internal": false,
    "method": "put",
    "path": "/pet/{petId}",
    "request": Object {
      "body": Object {
        "contents": Array [
          Object {
            "examples": Array [],
            "id": "3304f039",
            "mediaType": "application/json",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/definitions/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight-id": "#/definitions/Pet",
              "xml": Object {
                "name": "Pet",
              },
            },
          },
          Object {
            "examples": Array [],
            "id": "6c5c3870",
            "mediaType": "application/xml",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/definitions/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight-id": "#/definitions/Pet",
              "xml": Object {
                "name": "Pet",
              },
            },
          },
        ],
        "description": "Pet object that needs to be added to the store",
        "id": "731b94c9",
        "required": true,
      },
      "cookie": Array [],
      "headers": Array [],
      "path": Array [
        Object {
          "deprecated": false,
          "id": "27770c6b",
          "name": "petId",
          "required": true,
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight-id": "#",
          },
          "style": "simple",
        },
      ],
      "query": Array [],
    },
    "responses": Array [
      Object {
        "code": "400",
        "contents": Array [],
        "description": "Invalid ID supplied",
        "headers": Array [],
        "id": "215a09a8",
      },
      Object {
        "code": "404",
        "contents": Array [
          Object {
            "examples": Array [],
            "id": "1ff04a4a",
            "mediaType": "application/xml",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "code": Object {
                  "type": "string",
                },
                "message": Object {
                  "type": "string",
                },
              },
              "required": Array [
                "code",
              ],
              "type": "object",
              "x-stoplight-id": "#/definitions/Error",
            },
          },
          Object {
            "examples": Array [],
            "id": "fdbf905f",
            "mediaType": "application/json",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "code": Object {
                  "type": "string",
                },
                "message": Object {
                  "type": "string",
                },
              },
              "required": Array [
                "code",
              ],
              "type": "object",
              "x-stoplight-id": "#/definitions/Error",
            },
          },
        ],
        "description": "Our shared 404 response.",
        "headers": Array [],
        "id": "deff0751",
      },
      Object {
        "code": "405",
        "contents": Array [],
        "description": "Validation exception",
        "headers": Array [],
        "id": "265a1187",
      },
    ],
    "security": Array [
      Array [
        Object {
          "flows": Object {
            "implicit": Object {
              "authorizationUrl": "https://petstore.swagger.io/oauth/dialog",
              "scopes": Object {
                "read:pets": "read your pets",
                "write:pets": "modify pets in your account",
              },
            },
          },
          "id": "0407a17d",
          "key": "petstore_auth",
          "type": "oauth2",
        },
      ],
    ],
    "servers": Array [
      Object {
        "id": "e60403d7",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "ecbccfaa",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "Update an existing pet",
    "tags": Array [
      Object {
        "id": "2e010d1a",
        "name": "pet",
      },
    ],
  },
]
`;

exports[`oas operation openapi v3 1`] = `
Array [
  Object {
    "deprecated": false,
    "description": "",
    "extensions": Object {
      "x-another": Object {
        "property": "value",
      },
      "x-test": true,
    },
    "id": "87bea6ad",
    "iid": "addPet",
    "internal": false,
    "method": "post",
    "path": "/pets",
    "request": Object {
      "body": Object {
        "contents": Array [
          Object {
            "encodings": Array [],
            "examples": Array [],
            "id": "3304f039",
            "mediaType": "application/json",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/components/schemas/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight-id": "#/components/schemas/Pet",
              "xml": Object {
                "name": "Pet",
              },
            },
          },
          Object {
            "encodings": Array [],
            "examples": Array [],
            "id": "6c5c3870",
            "mediaType": "application/xml",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/components/schemas/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight-id": "#/components/schemas/Pet",
              "xml": Object {
                "name": "Pet",
              },
            },
          },
        ],
        "description": "Pet object that needs to be added to the store",
        "id": "731b94c9",
        "required": true,
      },
      "cookie": Array [],
      "headers": Array [],
      "path": Array [],
      "query": Array [],
    },
    "responses": Array [
      Object {
        "code": "405",
        "contents": Array [],
        "description": "Invalid input",
        "headers": Array [],
        "id": "d61e3a98",
      },
    ],
    "security": Array [
      Array [
        Object {
          "flows": Object {
            "implicit": Object {
              "authorizationUrl": "https://petstore.swagger.io/oauth/dialog",
              "scopes": Object {
                "read:pets": "read your pets",
                "write:pets": "modify pets in your account",
              },
            },
          },
          "id": "0407a17d",
          "key": "petstore_auth",
          "type": "oauth2",
        },
      ],
    ],
    "servers": Array [
      Object {
        "id": "e60403d7",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "ecbccfaa",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "Add a new pet to the store",
    "tags": Array [
      Object {
        "id": "2e010d1a",
        "name": "pet",
      },
    ],
  },
  Object {
    "deprecated": false,
    "extensions": Object {},
    "id": "122ea0ed",
    "internal": false,
    "method": "get",
    "path": "/pets",
    "request": Object {
      "body": Object {
        "contents": Array [],
        "id": "9b4cefc9",
      },
      "cookie": Array [],
      "headers": Array [],
      "path": Array [],
      "query": Array [
        Object {
          "deprecated": false,
          "examples": Array [],
          "explode": false,
          "id": "7831e071",
          "name": "skip",
          "required": false,
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight-id": "#",
          },
          "style": "simple",
        },
        Object {
          "deprecated": false,
          "examples": Array [],
          "explode": false,
          "id": "8d2b0bf9",
          "name": "limit",
          "required": false,
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight-id": "#",
          },
          "style": "simple",
        },
      ],
    },
    "responses": Array [
      Object {
        "code": "200",
        "contents": Array [
          Object {
            "encodings": Array [],
            "examples": Array [],
            "id": "9254a353",
            "mediaType": "*/*",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {},
              "type": "object",
              "x-stoplight-id": "#/paths/~1pets/get/responses/200/content/*~1*/schema",
            },
          },
        ],
        "description": "OK",
        "headers": Array [],
        "id": "d3eaa051",
      },
    ],
    "security": Array [],
    "servers": Array [
      Object {
        "id": "e60403d7",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "ecbccfaa",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "List pets",
    "tags": Array [],
  },
  Object {
    "deprecated": false,
    "description": "",
    "extensions": Object {},
    "id": "d2549ba8",
    "iid": "updatePet",
    "internal": false,
    "method": "put",
    "path": "/pet/{petId}",
    "request": Object {
      "body": Object {
        "contents": Array [
          Object {
            "encodings": Array [],
            "examples": Array [],
            "id": "3304f039",
            "mediaType": "application/json",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/components/schemas/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight-id": "#/components/schemas/Pet",
              "xml": Object {
                "name": "Pet",
              },
            },
          },
          Object {
            "encodings": Array [],
            "examples": Array [],
            "id": "6c5c3870",
            "mediaType": "application/xml",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/components/schemas/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight-id": "#/components/schemas/Pet",
              "xml": Object {
                "name": "Pet",
              },
            },
          },
        ],
        "description": "Pet object that needs to be added to the store",
        "id": "731b94c9",
        "required": true,
      },
      "cookie": Array [],
      "headers": Array [],
      "path": Array [
        Object {
          "deprecated": false,
          "examples": Array [],
          "explode": false,
          "id": "27770c6b",
          "name": "petId",
          "required": true,
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight-id": "#",
          },
          "style": "simple",
        },
      ],
      "query": Array [],
    },
    "responses": Array [
      Object {
        "code": "400",
        "contents": Array [],
        "description": "Invalid ID supplied",
        "headers": Array [],
        "id": "215a09a8",
      },
      Object {
        "code": "404",
        "contents": Array [
          Object {
            "encodings": Array [],
            "examples": Array [],
            "id": "f21878b7",
            "mediaType": "*/*",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "code": Object {
                  "type": "string",
                },
                "message": Object {
                  "type": "string",
                },
              },
              "required": Array [
                "code",
              ],
              "type": "object",
              "x-stoplight-id": "#/components/schemas/Error",
            },
          },
        ],
        "description": "Our shared 404 response.",
        "headers": Array [],
        "id": "deff0751",
      },
      Object {
        "code": "405",
        "contents": Array [],
        "description": "Validation exception",
        "headers": Array [],
        "id": "265a1187",
      },
    ],
    "security": Array [
      Array [
        Object {
          "flows": Object {
            "implicit": Object {
              "authorizationUrl": "https://petstore.swagger.io/oauth/dialog",
              "scopes": Object {
                "read:pets": "read your pets",
                "write:pets": "modify pets in your account",
              },
            },
          },
          "id": "0407a17d",
          "key": "petstore_auth",
          "type": "oauth2",
        },
      ],
    ],
    "servers": Array [
      Object {
        "id": "e60403d7",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "ecbccfaa",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "Update an existing pet",
    "tags": Array [
      Object {
        "id": "2e010d1a",
        "name": "pet",
      },
    ],
  },
]
`;
